kubernetes/netdata/00-configmap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
