kubernetes/netdata/03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: netdata-master
  namespace: monitoring
spec:
  type: ExternalName
  ports:
  - port: 19999
  externalName: 192.168.10.12
